{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 884,
  "lineage": "ef1aa3a7-2697-b15c-3f8a-81c88e22400f",
  "resources": [
    {
      "module": "module.ansible-master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e08697c325f02ab",
            "arn": "arn:aws:ec2:eu-central-1:582368561817:instance/i-029f4ca3e99a3ac6a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029f4ca3e99a3ac6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-040904b2ed5e5dd07",
            "private_dns": "ip-10-0-1-10.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_ip": "35.158.9.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e4cdbb78ae84151",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b6ceab30429898d",
            "tags": {
              "Created": "Terraform",
              "Name": "ansible"
            },
            "tags_all": {
              "Created": "Terraform",
              "Name": "ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e7f5fa371e79605",
              "sg-0da5af562a67e5af8"
            ]
          },
          "dependencies": [
            "data.cloudinit_config.ansible_master",
            "module.dns_net.aws_subnet.subnet",
            "module.dns_net.aws_vpc.vpc",
            "module.icmp.aws_security_group.sec_group",
            "module.ssh_from_internet.aws_security_group.sec_group"
          ]
        }
      ]
    },
    {
      "module": "module.dns",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e08697c325f02ab",
            "arn": "arn:aws:ec2:eu-central-1:582368561817:instance/i-097400b41121a7e4b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097400b41121a7e4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dns_stack",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05ce39d7f28ff408c",
            "private_dns": "ip-10-0-1-15.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0612de2d100379ac0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b6ceab30429898d",
            "tags": {
              "Created": "Terraform",
              "Name": "dns"
            },
            "tags_all": {
              "Created": "Terraform",
              "Name": "dns"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e7f5fa371e79605",
              "sg-0c7822c8afbd086b7"
            ]
          },
          "dependencies": [
            "module.dns_key_pair.aws_key_pair.test_stack",
            "module.dns_net.aws_subnet.subnet",
            "module.dns_net.aws_vpc.vpc",
            "module.icmp.aws_security_group.sec_group",
            "module.ssh_local.aws_security_group.sec_group"
          ]
        }
      ]
    },
    {
      "module": "module.dns_net",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "int_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:582368561817:internet-gateway/igw-0daaf90a4ea0fb6d1",
            "id": "igw-0daaf90a4ea0fb6d1",
            "owner_id": "582368561817",
            "tags": {
              "Created": "Terraform",
              "Name": "dns_gateway"
            },
            "tags_all": {
              "Created": "Terraform",
              "Name": "dns_gateway"
            },
            "vpc_id": "vpc-08a493d2dc2818a50"
          },
          "dependencies": [
            "module.dns_net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dns_net",
      "mode": "managed",
      "type": "aws_route",
      "name": "local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0daaf90a4ea0fb6d1",
            "id": "r-rtb-0f822bf9fe7ba23f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f822bf9fe7ba23f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dns_net.aws_internet_gateway.int_gateway",
            "module.dns_net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dns_net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:582368561817:subnet/subnet-03b6ceab30429898d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b6ceab30429898d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582368561817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created": "Terraform",
              "Name": "dns_subnet"
            },
            "tags_all": {
              "Created": "Terraform",
              "Name": "dns_subnet"
            },
            "vpc_id": "vpc-08a493d2dc2818a50"
          },
          "dependencies": [
            "module.dns_net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dns_net",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:582368561817:vpc/vpc-08a493d2dc2818a50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0884f80213224ddf8",
            "default_route_table_id": "rtb-0f822bf9fe7ba23f6",
            "default_security_group_id": "sg-0afedae06fc5766d7",
            "dhcp_options_id": "dopt-0aa3436037f48dbf6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a493d2dc2818a50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f822bf9fe7ba23f6",
            "owner_id": "582368561817",
            "tags": {
              "Created": "Terraform",
              "Name": "dns_vpc"
            },
            "tags_all": {
              "Created": "Terraform",
              "Name": "dns_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.icmp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:582368561817:security-group/sg-05e7f5fa371e79605",
            "description": "allow icmp(ping) traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "id": "sg-05e7f5fa371e79605",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "icmp",
            "name_prefix": "",
            "owner_id": "582368561817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created": "Terraform",
              "Name": "icmp"
            },
            "tags_all": {
              "Created": "Terraform",
              "Name": "icmp"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a493d2dc2818a50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dns_net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_from_internet",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:582368561817:security-group/sg-0da5af562a67e5af8",
            "description": "open port 22 to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da5af562a67e5af8",
            "ingress": [
              {
                "cidr_blocks": [
                  "78.11.112.118/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_from_internet",
            "name_prefix": "",
            "owner_id": "582368561817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created": "Terraform",
              "Name": "ssh_from_internet"
            },
            "tags_all": {
              "Created": "Terraform",
              "Name": "ssh_from_internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a493d2dc2818a50"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "module.dns_net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_local",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:582368561817:security-group/sg-0c7822c8afbd086b7",
            "description": "allow ssh inside subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7822c8afbd086b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_local",
            "name_prefix": "",
            "owner_id": "582368561817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created": "Terraform",
              "Name": "ssh_local"
            },
            "tags_all": {
              "Created": "Terraform",
              "Name": "ssh_local"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a493d2dc2818a50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dns_net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.user",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e08697c325f02ab",
            "arn": "arn:aws:ec2:eu-central-1:582368561817:instance/i-0ee2538238863486f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee2538238863486f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dns_stack",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02884b1e6ef06c55f",
            "private_dns": "ip-10-0-1-25.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0948093e24c62701d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b6ceab30429898d",
            "tags": {
              "Created": "Terraform",
              "Name": "user"
            },
            "tags_all": {
              "Created": "Terraform",
              "Name": "user"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e7f5fa371e79605",
              "sg-0c7822c8afbd086b7"
            ]
          },
          "dependencies": [
            "module.dns_key_pair.aws_key_pair.test_stack",
            "module.dns_net.aws_subnet.subnet",
            "module.dns_net.aws_vpc.vpc",
            "module.icmp.aws_security_group.sec_group",
            "module.ssh_local.aws_security_group.sec_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e08697c325f02ab",
            "arn": "arn:aws:ec2:eu-central-1:582368561817:instance/i-0d092d05df47cb313",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d092d05df47cb313",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dns_stack",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08cdeb807bc9e1bae",
            "private_dns": "ip-10-0-1-30.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0996c35a5874d84e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b6ceab30429898d",
            "tags": {
              "Created": "Terraform",
              "Name": "user2"
            },
            "tags_all": {
              "Created": "Terraform",
              "Name": "user2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e7f5fa371e79605",
              "sg-0c7822c8afbd086b7"
            ]
          },
          "dependencies": [
            "module.dns_key_pair.aws_key_pair.test_stack",
            "module.dns_net.aws_subnet.subnet",
            "module.dns_net.aws_vpc.vpc",
            "module.icmp.aws_security_group.sec_group",
            "module.ssh_local.aws_security_group.sec_group"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e08697c325f02ab",
            "arn": "arn:aws:ec2:eu-central-1:582368561817:instance/i-0910458d127214169",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0910458d127214169",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dns_stack",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab1f2ad9fbcdbd27",
            "private_dns": "ip-10-0-1-20.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd6017c704f31c02",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b6ceab30429898d",
            "tags": {
              "Created": "Terraform",
              "Name": "webserver"
            },
            "tags_all": {
              "Created": "Terraform",
              "Name": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e7f5fa371e79605",
              "sg-0c7822c8afbd086b7"
            ]
          },
          "dependencies": [
            "module.dns_key_pair.aws_key_pair.test_stack",
            "module.dns_net.aws_subnet.subnet",
            "module.dns_net.aws_vpc.vpc",
            "module.icmp.aws_security_group.sec_group",
            "module.ssh_local.aws_security_group.sec_group"
          ]
        }
      ]
    }
  ]
}